[package]
name = "egui-euc"
version = "0.1.0"
edition = "2024"

[dependencies]
euc = { git = "https://github.com/zesterer/euc.git", rev = "e8f7aee" }
egui = "0.32.0"
bytemuck = "1.23.1"

#egui-winit = { version = "0.32.0", default-features = false, features = ["links"] }

[dev-dependencies]
eframe = "0.32.0"
anyhow = "1"
egui_demo_lib = "0.32.0"
